--- a/cfg/supervisord.conf
+++ b/cfg/supervisord.conf
@@ -1,6 +1,16 @@
 [supervisord]
 nodaemon=true
 loglevel=debug
+logfile = NONE
+
+[program:cron]
+command=cron -f
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/null
+stderr_logfile=/dev/null
+autostart=true
+autorestart=true
 
 [program:apache2]
 priority=10
@@ -16,8 +26,10 @@ command=mysqld
 process_name=mysqld
 user_name=mysql
 redirect_stderr=true
-stdout_logfile=syslog
-stderr_logfile=syslog
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/null
+stderr_logfile=/dev/null
 autostart=true
 autorestart=true
 
@@ -31,7 +43,7 @@ autorestart=false
 priority=999
 user=solr
 directory=/opt/solr
-command=/opt/solr/bin/solr start -f -noprompt -m 512m -h 0.0.0.0 -p 8983
+command=/opt/solr/bin/solr start -f -noprompt -h 0.0.0.0 -p 8983
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/null
